--- a/GerenciamentoVendas/Views/Usuarios/Usuarios.cshtml
+++ b/GerenciamentoVendas/Views/Usuarios/Usuarios.cshtml
@@ -84,9 +84,9 @@
         </header>
         <nav id="navbar" class="container">
             <div class="row justify-content-center">
-                <a href="/api/Usuario/Usuarios?#" class="disabled">Usuários</a>
+                <a href="#" class="disabled">Usuários</a>
                 <a href="/api/ClientePessoaJuridica/Clientes?#">Clientes</a>
-                <a href="#">Oportunidades</a>
+                <a href="/api/Usuario/Oportunidades?#">Oportunidades</a>
             </div>
         </nav>
     </div>
