Concluindo tela Oportunidades

--- a/GerenciamentoVendas/Views/Usuarios/Oportunidades.cshtml
+++ b/GerenciamentoVendas/Views/Usuarios/Oportunidades.cshtml
@@ -96,8 +96,8 @@
             <div class="row">
                 <form class="formCadastro" id="cadastroUsuario">
                     <div class="row">
+                        <label style="margin-left: 10px;" for="usuario">Usuário:</label>
                         <div id="selectUsers" class="col form-group m-2">
-                            <label for="regiao">Usuário:</label>
                         </div>
                     </div>
                 </form>
